# dope-jobs

./: .gitignore  AGENTS.md  ARCHIVE_STATUS.md  README.md  benchmark_local_embedding_model.py  benchmark_openrouter_embeddings.py  companies.txt  db.py  detect_boilerplate.py  enrich_companies.py  eval_prompts.py  factory.py  fix_companies.py  greenhouse.py  index.html  job_groups.py  legacy_pipeline_bridge.py  load_sample.py  load_to_meili.py  main.py  model_tournament.py  notes.txt  parse.py  parsing.py  pipeline.py  pyproject.toml  refresh_tokens_cc.py  requirements.txt  setup_remote_meili.py  test_embeddings.py  test_hybrid_search.py  test_model_quality.py  test_pipeline.py  test_scrapers.py  validate_all_tokens.py  validate_logos.py  validate_tokens.py
fine-tune/: settings.yaml
ops/: apply_perplexity_meili_embedder.py  import_status.py  perplexity-embedder.service  perplexity-tei.service  perplexity_embedder_service.py  recompute_and_reload_all_jobs.py  reload_pending_meili.py
scrapers/: __init__.py  ashby_scraper.py  base_scraper.py  greenhouse_scraper.py  jobvite_scraper.py  lever_scraper.py  template.py
tests/: test_integration.py  test_merge_api_data.py
utils/: func_utils.py  html_utils.py  job_utils.py
